Showing Issue title in AddWorkItem dialog

--- a/application/src/main/resources/fx/css/dark.css
+++ b/application/src/main/resources/fx/css/dark.css
@@ -56,7 +56,8 @@
 
 .favourite-issue-cell,
 .favourite-search-cell,
-.time-report-table .issue-title {
+.time-report-table .issue-title,
+.hyperlink {
     -fx-text-fill: -ytwlv-bright-highlighted-text-color;
 }
 
