--- a/application/src/main/resources/fx/views/issue-details.fxml
+++ b/application/src/main/resources/fx/views/issue-details.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.web.WebView?>
-<fx:root type="BorderPane" fx:id="issueDetailsPane" styleClass="issue-details-pane" minHeight="600.0" minWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="issueDetailsPane" minHeight="600.0" minWidth="800.0" styleClass="issue-details-pane" type="BorderPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <top>
         <VBox spacing="10">
             <padding>
@@ -14,16 +14,16 @@
             </padding>
 
             <Label fx:id="issueSummaryLabel" styleClass="issue-summary" wrapText="true" />
-            <FlowPane fx:id="issueTagsPane" VBox.vgrow="SOMETIMES" hgap="5.0" vgap="3.0" />
+            <FlowPane fx:id="issueTagsPane" hgap="5.0" vgap="3.0" VBox.vgrow="SOMETIMES" />
             <FlowPane fx:id="issueFieldsPane" VBox.vgrow="SOMETIMES" />
         </VBox>
     </top>
 
     <center>
         <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" VBox.vgrow="ALWAYS">
-            <WebView fx:id="issueDescriptionWebView"/>
+            <WebView fx:id="issueDescriptionWebView" />
             <BorderPane.margin>
-                <Insets top="20.0"/>
+                <Insets top="20.0" />
             </BorderPane.margin>
         </ScrollPane>
     </center>
@@ -32,11 +32,21 @@
         <VBox spacing="3.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <BorderPane>
                 <center>
-                    <Label text="Zeitbuchungen" BorderPane.alignment="CENTER_LEFT">
-                        <font>
-                            <Font name="System Bold" size="13.0"/>
-                        </font>
-                    </Label>
+                    <HBox alignment="CENTER_LEFT" spacing="15.0">
+                        <Label text="Zeitbuchungen">
+                            <font>
+                                <Font name="System Bold" size="13.0" />
+                            </font>
+                        </Label>
+                        <StackPane fx:id="progressStackPane" alignment="CENTER_LEFT" prefWidth="300.0">
+                            <ProgressBar fx:id="spentTimeProgressBar" maxWidth="1.7976931348623157E308" progress="0.25" />
+                            <Label fx:id="spentTimeLabel" alignment="CENTER" maxWidth="1.7976931348623157E308" text="1d 30m / 2d 4h">
+                                <font>
+                                    <Font name="System Bold" size="9.0" />
+                                </font>
+                            </Label>
+                        </StackPane>
+                    </HBox>
                 </center>
                 <right>
                     <HBox BorderPane.alignment="CENTER">
@@ -46,22 +56,22 @@
             </BorderPane>
             <TableView fx:id="issueWorklogsTableView" prefHeight="200.0">
                 <columnResizePolicy>
-                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                 </columnResizePolicy>
                 <columns>
-                    <WorklogDateColumn fx:id="dateColumn"/>
-                    <WorklogAuthorColumn/>
-                    <WorklogTypeColumn/>
-                    <WorklogDescriptionColumn/>
-                    <WorklogDurationColumn/>
-                    <WorklogActionsColumn/>
+                    <WorklogDateColumn fx:id="dateColumn" />
+                    <WorklogAuthorColumn />
+                    <WorklogTypeColumn />
+                    <WorklogDescriptionColumn />
+                    <WorklogDurationColumn />
+                    <WorklogActionsColumn />
                 </columns>
                 <sortOrder>
-                    <fx:reference source="dateColumn" sortType="DESCENDING" />
+                    <fx:reference sortType="DESCENDING" source="dateColumn" />
                 </sortOrder>
             </TableView>
             <BorderPane.margin>
-                <Insets top="20.0"/>
+                <Insets top="20.0" />
             </BorderPane.margin>
         </VBox>
     </bottom>
